--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
 <body>
     <div class="red"> fasfds </div>
     <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, consectetur!</p>
+    <ul>
 
+        <li> item 1 </li>
+        <li> item 1 </li>
+        <li> item 1 </li>
+        <li> item 1 </li>
+
+    </ul>
 </body>
 
 </html>
